fixed text overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -475,6 +475,7 @@ a:visited {
     &__plate-description-text {
       width: 100%;
       margin-left: 10px;
+      overflow: hidden; // permet au prix de rester visible en minifiant la description + "..."
     
       @include medium-screen {
         margin-left: 20px;
